# ppocr-ncnn

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-portable.yml
crates/ncnnrs/: Cargo.toml  README.md  build.rs
crates/ncnnrs/src/: allocator.rs  data_reader.rs  extractor.rs  lib.rs  mat.rs  net.rs  option.rs
models/rec/: ppocrv5_dict.txt
ppocr-ncnn/: Cargo.toml
ppocr-ncnn/examples/: benchmark_cpu.rs  benchmark_cpu_vulkan.rs  benchmark_vulkan.rs
ppocr-ncnn/examples/common/: mod.rs
ppocr-ncnn/src/: geometry.rs  image_ops.rs  lib.rs
ppocr-ncnn/src/ocr/: classification.rs  config.rs  engine.rs  mod.rs  runtime.rs  types.rs
ppocr-ncnn/src/ocr/detection/: inference.rs  mod.rs  postprocess.rs
ppocr-ncnn/src/ocr/recognition/: decoder.rs  inference.rs  mod.rs
